--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0"
+    "start": "./node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0",
+    "test": "eslint src/**"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.3.0",
+    "json-loader": "^0.5.4",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
