--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-modal": "^1.6.3",
     "react-motion": "^0.4.5",
     "react-router": "^4.0.0-alpha.4"
   }
