--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "react": "^15.3.2",
+    "react-component-resizable": "^1.1.0-rc1",
     "react-dom": "^15.3.2",
     "react-modal": "^1.6.3",
     "react-motion": "^0.4.5",
